--- a/client/package.json
+++ b/client/package.json
@@ -5,15 +5,18 @@
   "dependencies": {
     "axios": "^0.16.2",
     "http-proxy-middleware": "^0.19.1",
+    "jquery": "^3.4.1",
     "materialize-css": "^0.100.2",
     "react": "^16.0.0-alpha.13",
     "react-dom": "^16.0.0-alpha.13",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-scripts": "^3.0.1",
+    "reactjs-popup": "^1.5.0",
     "redux": "^3.7.1",
     "redux-form": "^7.0.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
